# WeatherApp

./: README.md
frontend/: .babelrc  README.md  babel.config.js  craco.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/__mocks__/: fileMock.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  README.md  index.css  index.tsx  setupTests.ts  weather.ts
frontend/src/__tests__/: utils.test.ts
frontend/src/components/: CityCard.test.tsx  CityCard.tsx  CitySearch.tsx  SettingDialog.tsx  SettingsDialog.test.tsx  Sidebar.test.tsx  Sidebar.tsx  WeatherCard.test.tsx  WeatherCard.tsx  WeatherForecast.test.tsx  WeatherForecast.tsx  WeatherHeader.test.tsx  WeatherHeader.tsx  WeatherIcon.tsx  WeatherMetricsGrid.test.tsx  WeatherMetricsGrid.tsx
frontend/src/proto/: WeatherServiceClientPb.ts  index.d.ts  weather.d.ts  weather_pb.d.ts  weather_pb.js
frontend/src/services/: mockWeatherService.ts  serviceFactory.ts  weatherService.ts
frontend/src/styles/: main.scss
frontend/src/theme/: components.ts  palette.ts  theme.ts
frontend/src/types/: weather.ts
frontend/src/utils/: utils.ts
proto/: weather.proto
server/: Cargo.toml  README.md  build.rs  envoy.yaml
server/config/: default.toml
server/src/: main.rs
server/src/config/: mod.rs  template.toml
server/src/error/: mod.rs
server/src/proto/: mod.rs
server/src/providers/: mod.rs  openweather.rs  traits.rs  weatherapi.rs
server/src/service/: weather.rs
server/src/tests/: mod.rs  provider_tests.rs  service_tests.rs
(+16 files in other folders)
