[package]
name = "weather_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tower = "0.4"
config = "0.13"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.18"
tonic-web = "0.11"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "0.14"

[build-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-build = "0.10"

[dev-dependencies]
mockall = "0.11"
mockito = "1.2"
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }